Application/Backend/platform/logging/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-logging
  namespace: logging
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    # Rule for specific host and root path
    - host: kibana.deeplink.in
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: kibana
                port:
                  number: 5601
